kubernetes/certificates-addon/ht-loyalty-dep-svc-ingress-tls.yml
---
apiVersion: apps/v1
kind: Deployment                 
metadata:
  name: hardtop-loyalty  
  namespace: loyalty         
spec:
  replicas: 3                    
  selector:
    matchLabels:
      app: hardtop-loyalty
  template:                      
    metadata:
      labels:                    
        app: hardtop-loyalty 
    spec:                        
      containers:
      - name: hardtop-loyalty
        image: eshanks16/ht-loyalty:v1.5
        imagePullPolicy: Always
        ports:
          - containerPort: 8080  
        livenessProbe:           
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 15
          timeoutSeconds: 5
        readinessProbe:   
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1    
---
apiVersion: v1
kind: Service
metadata:
  name: loyalty-svc
  labels:
    app: hardtop-loyalty
  namespace: loyalty
spec:
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
  selector:
    app: hardtop-loyalty
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  name: ht-loyalty-ingress
  namespace: loyalty
spec:
  rules:
  - host: loyalty.hardtophotels.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: loyalty-svc
            port: 
              number: 8080
  tls: # < placing a host in the TLS config will indicate a certificate should be created
  - hosts:
    - loyalty.hardtophotels.com
    secretName: loyalty-cert
